// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="onboarding.create_project.header"
    titleTemplate="%s"
  />
  <div
    className="page page-limited huge-spacer-top huge-spacer-bottom"
  >
    <header
      className="page-header huge-spacer-bottom"
    >
      <h1
        className="page-title huge"
      >
        <strong>
          onboarding.create_project.header
        </strong>
      </h1>
    </header>
    <DeferredSpinner
      timeout={100}
    />
  </div>
</Fragment>
`;

exports[`should render correctly 2`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="onboarding.create_project.header"
    titleTemplate="%s"
  />
  <div
    className="page page-limited huge-spacer-top huge-spacer-bottom"
  >
    <header
      className="page-header huge-spacer-bottom"
    >
      <h1
        className="page-title huge"
      >
        <strong>
          onboarding.create_project.header
        </strong>
      </h1>
    </header>
    <Tabs
      onChange={[Function]}
      selected="auto"
      tabs={
        Array [
          Object {
            "key": "auto",
            "node": "onboarding.create_project.select_repositories",
          },
          Object {
            "key": "manual",
            "node": "onboarding.create_project.setup_manually",
          },
        ]
      }
    />
    <AutoProjectCreate
      almApplication={
        Object {
          "backgroundColor": "blue",
          "iconPath": "icon/path",
          "installationUrl": "https://alm.installation.url",
          "key": "github",
          "name": "GitHub",
        }
      }
      boundOrganizations={
        Array [
          Object {
            "actions": Object {
              "admin": false,
              "provision": true,
            },
            "alm": Object {
              "key": "github",
              "membersSync": false,
              "url": "https://github.com/foo",
            },
            "key": "bar",
            "name": "Bar",
          },
        ]
      }
      onProjectCreate={[Function]}
    />
  </div>
</Fragment>
`;

exports[`should render with Manual creation only 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="onboarding.create_project.header"
    titleTemplate="%s"
  />
  <div
    className="page page-limited huge-spacer-top huge-spacer-bottom"
  >
    <header
      className="page-header huge-spacer-bottom"
    >
      <h1
        className="page-title huge"
      >
        <strong>
          onboarding.create_project.header
        </strong>
      </h1>
    </header>
    <ManualProjectCreate
      currentUser={
        Object {
          "externalProvider": "microsoft",
          "groups": Array [],
          "isLoggedIn": true,
          "login": "foo",
          "name": "Foo",
          "scmAccounts": Array [],
        }
      }
      onProjectCreate={[Function]}
      userOrganizations={
        Array [
          Object {
            "actions": Object {
              "admin": false,
              "provision": true,
            },
            "key": "foo",
            "name": "Foo",
          },
          Object {
            "actions": Object {
              "admin": false,
              "provision": true,
            },
            "alm": Object {
              "key": "github",
              "membersSync": false,
              "url": "https://github.com/foo",
            },
            "key": "bar",
            "name": "Bar",
          },
        ]
      }
    />
  </div>
</Fragment>
`;

exports[`should switch tabs 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="onboarding.create_project.header"
    titleTemplate="%s"
  />
  <div
    className="page page-limited huge-spacer-top huge-spacer-bottom"
  >
    <header
      className="page-header huge-spacer-bottom"
    >
      <h1
        className="page-title huge"
      >
        <strong>
          onboarding.create_project.header
        </strong>
      </h1>
    </header>
    <Tabs
      onChange={[Function]}
      selected="auto"
      tabs={
        Array [
          Object {
            "key": "auto",
            "node": "onboarding.create_project.select_repositories",
          },
          Object {
            "key": "manual",
            "node": "onboarding.create_project.setup_manually",
          },
        ]
      }
    />
    <AutoProjectCreate
      almApplication={
        Object {
          "backgroundColor": "blue",
          "iconPath": "icon/path",
          "installationUrl": "https://alm.installation.url",
          "key": "github",
          "name": "GitHub",
        }
      }
      boundOrganizations={
        Array [
          Object {
            "actions": Object {
              "admin": false,
              "provision": true,
            },
            "alm": Object {
              "key": "github",
              "membersSync": false,
              "url": "https://github.com/foo",
            },
            "key": "bar",
            "name": "Bar",
          },
        ]
      }
      onProjectCreate={[Function]}
    />
  </div>
</Fragment>
`;
